--- a/food/assets/style/style.css
+++ b/food/assets/style/style.css
@@ -168,8 +168,91 @@ nav a:hover {
 }
 
 
+/* menu design */
 
+.menu{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 25px;
+    margin-bottom: 50px;
+}
 
+.menu-item{
+    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+.menu-item:hover{
+    transform: translateY(-5x);
+}
+
+.item-image{
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.item-content{
+    padding: 20px;
+}
+.item-title{
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+    color: var(--secondary);
+}
+
+.item-desc{
+    color: var(--gray);
+    margin-bottom: 15px;
+    font-size: 0.9rem;
+}
+.item-footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.item-price{
+    font-weight: 700;
+    color: var(--primary);
+    font-size: 1.2rem;
+}
+
+.add-to-cart{
+    background-color: var(--primary);
+    color: white;
+    border: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    
+}
+.add-to-cart:hover{
+    background-color: var(--accent);
+}
+
+/* Cart Sidebar */
+.cart-sidebar{
+    position: fixed;
+    top: 0px;
+    right: -350px;
+    width: 350px;
+    height: 100vh;
+    background-color: white;
+    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    overflow-y:auto;
+    transition: right 0.3s ease;
+    z-index: 1000;
+}
+ 
 /* responsive Design */
 @media (max-width: 768px){
     .header-content{
